--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -11,7 +11,7 @@ ul {
     margin: 0;
     padding: 0;
 }
-li{
+li a{
     list-style-type: none;
 }
 h2{
@@ -24,6 +24,10 @@ a{
     text-decoration: none;
     color: white;
  }
+img{
+    width: auto;
+    height:50px;
+    object-position:50% 50%;
 /*****************************NAVBAR*********************** */
 nav{
     overflow: hidden;
