--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -24,7 +24,7 @@ a{
     text-decoration: none;
     color: white;
  }
-img{
+ul img{
     width: auto;
     height:50px;
     object-position:50% 50%;
