--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -28,6 +28,7 @@ ul img{
     width: auto;
     height:50px;
     object-position:50% 50%;
+}
 /*****************************NAVBAR*********************** */
 nav{
     overflow: hidden;
