--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -24,6 +24,11 @@ a{
     text-decoration: none;
     color: white;
  }
+li img{
+    height: 50px;
+    width: auto;
+    object-position: 50% 50%;
+}
 /*****************************NAVBAR*********************** */
 nav{
     overflow: hidden;
