--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -102,6 +102,9 @@ h3 {
     padding: 0px ;
     text-align: center;
 }
+#presentation h2{
+    color: black;
+}
 #prestations {
     display: flex ;
     flex-wrap: wrap;
