--- a/Le_Site_SAE.05-06/Page_histoire/styles.css
+++ b/Le_Site_SAE.05-06/Page_histoire/styles.css
@@ -12,6 +12,8 @@ ul {
 
 li{
     list-style-type: none;
+	margin: 10px;
+    margin-top: -2px;
 }
 
 
@@ -22,6 +24,7 @@ img{
 }
 
 a{
+	text-decoration: none;
     color: white;
 }
 
