--- a/Le_Site_SAE.05-06/Page_histoire/styles.css
+++ b/Le_Site_SAE.05-06/Page_histoire/styles.css
@@ -25,7 +25,19 @@ a{
     color: white;
 }
 
+li img:hover{
+    height: 52px;
+    transition: ease-in-out 0.5s;
+    background-color: #0028BE;
+}
 
+li a:hover{
+    background-color: white;
+    color: #0028BE;
+    border-radius: 10%;
+    font-size: 22px;
+    transition: ease-in-out 0.5s;
+}
 
 /************** NAVBAR **************/
 
@@ -39,7 +51,7 @@ nav{
 }
 header li{
     float: right;
-    font-size: 3em;
+    font-size: 1.2em;
 }
 header li a{
     text-decoration: none;
@@ -60,7 +72,6 @@ header li a{
     font-family: 'Dancing Script', cursive;
     text-align: center;
     color: #0028BE;
-    padding-top: 100px;
     font-size: 60px;
 }
 
@@ -68,17 +79,9 @@ header li a{
     font-size: 30px ;
     color:#0028BE;
     text-align: center;
+    padding-top: 100px;
 }
 
-#info2{
-    text-align: center;
-    color: #0028BE;
-}
-
-#info3{
-    text-align: center;
-    color: #0028BE;
-}
 
 h1 {
     font-family: 'Dancing Script' cursive;
@@ -93,6 +96,15 @@ h1 {
     border: solid black;
     border-radius: 50px;
     background-color: #0028BE   ;
+}
+
+
+#TraitSeparation{
+    height: 3px;
+    width: 75%;
+    margin: -3px auto;
+    background-color: #0028BE;
+    box-shadow: 1px 3px 2px black;
 }
 
 /************** TIMELINE **************/
