--- a/Le_Site_SAE.05-06/Page stats/css/style_stat.css
+++ b/Le_Site_SAE.05-06/Page stats/css/style_stat.css
@@ -2,11 +2,15 @@ body{
     font-family: 'Advent Pro', sans-serif;
 }
 .barre_nav{
-    background-color: blue ;
-    opacity: 70%;
+    background-color: #0028BE;
     padding: 10px;
     padding-bottom: 30px;
     margin: -1%;
+    margin-top: -300px;;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    opacity: 0.9;
 }
 .webedia{
     width: 400px;
@@ -30,7 +34,7 @@ ul{
     margin-right: 60px;
 }
 li{
-  color: white;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     display: inline;
     padding: 25px;
@@ -41,16 +45,16 @@ li{
 li a:hover{
   color: blue;
   background-color: white;
-    transition: ease-in-out 0.5s
+  transition: ease-in-out 0.5s
 }
 h1{
     text-align: center;
     color: rgb(164, 184, 252);
     text-shadow: 1px 4px 2px black;
     font-size: 4em;
-    margin-top: 200px;
+    margin-top: 300px;
     margin-bottom: 10px;
-  }
+}
 #premierTrait{
       height: 2px;
       width: 50%;
@@ -60,13 +64,14 @@ h1{
       box-shadow: 1px 3px 2px black;
       margin-left: auto;
       margin-right: auto
-  }
+}
 .item{
     border: 5px solid black;
+    margin-top: -50px;
     margin-left: 600px;
     margin-right: 600px;
-    margin-bottom: 100px;
-    background-color: #1a237e;
+    margin-bottom: 250px;
+    background: linear-gradient(to right, yellow, orange, pink, purple, #1a237e);
   }
 .diagramme {
     width: 70px;
@@ -76,7 +81,7 @@ h1{
     margin-bottom: 50px;
     margin-top: 50px;
     background-image: conic-gradient(
-        orange 40deg,
+        magenta 40deg,
         #9900CC 0 170deg,
         #000066 0);
 }
@@ -88,12 +93,7 @@ h1{
   font-size: 2em;
   margin-top: -70px;
 }
-#finance {
-    background: url(fond_ecran/ finance.jpg) no-repeat fixed;
-    background-color: darkblue;
-    background-size: cover;
-    width: 250px;
-}
+
 .container-flex{display: flex;}
 .container{justify-content: space-evenly;}
 .container{align-items: center;}
@@ -105,8 +105,20 @@ h1{
 
 .bloc{
   text-align: center;
-  background-color: black;
+  background-color: darkblue;
   color: white;
+}
+.barreVerticale1{
+  border-left: 4px solid black;
+  height: 1000px;
+  display: inline-block;
+  margin-left: 100px;
+}
+.barreVerticale2{
+  border-right: 4px solid black;
+  height: 1000px;
+  display: inline-block;
+  margin-left: 1600px;
 }
 .images1{padding: 30px;}
 .pose1{margin-left: 260px;}
@@ -129,8 +141,18 @@ h1{
 .images3{padding: 10px;}
 .pose7{
   margin-left: 420px;
-  margin-bottom: 100px;
+  margin-bottom: 200px;
 }
 .pose8{
   margin-left: 370px;
+}
+.fin{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #0028BE ;
+    opacity: 0.9;
+    padding: 10px;
+    margin-bottom: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+    color: white;
 }
