--- a/Le_Site_SAE.05-06/Page stats/css/style_stat.css
+++ b/Le_Site_SAE.05-06/Page stats/css/style_stat.css
@@ -55,11 +55,11 @@ h1{
     margin-top: 300px;
     margin-bottom: 10px;
 }
-#premierTrait{
+.premierTrait{
       height: 2px;
       width: 50%;
       margin-top: 20px;
-      margin-bottom: 300px;
+      margin-bottom: 200px;
       background-color: #0028BE;
       box-shadow: 1px 3px 2px black;
       margin-left: auto;
@@ -70,10 +70,18 @@ h1{
     margin-top: -50px;
     margin-left: 600px;
     margin-right: 600px;
-    margin-bottom: 250px;
+    margin-bottom: 80px;
     background: linear-gradient(to right, yellow, orange, pink, purple, #1a237e);
   }
-.diagramme {
+.secondTrait{
+  height: 3px;
+  width: 25%;
+  background-color: black;
+  margin-bottom: 120px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.diagramme{
     width: 70px;
     height: 70px;
     border-radius: 50%;
@@ -101,51 +109,28 @@ h1{
 .item-width1{width: 350px}
 .item-width2{width: 400px;}
 .item-width3{width: 300px;}
-.item-height-small{height: 60px;}
 
+.presentation{
+  height: 1900px;
+  border-left: solid;
+  border-right: solid;
+  margin: 0px 100px 80px 100px;
+  background-color: rgb(164, 184, 252);
+}
+.presentation img{
+  margin-top: 70px;
+  margin-bottom: 40px;
+}
 .bloc{
   text-align: center;
-  background-color: darkblue;
+  background-color: #0028BE;
   color: white;
-}
-.barreVerticale1{
-  border-left: 4px solid black;
-  height: 1000px;
-  display: inline-block;
-  margin-left: 100px;
-}
-.barreVerticale2{
-  border-right: 4px solid black;
-  height: 1000px;
-  display: inline-block;
-  margin-left: 1600px;
+  margin-top: 50px;
 }
 .images1{padding: 30px;}
-.pose1{margin-left: 260px;}
-.pose2{margin-left: 140px;}
-.pose3{margin-left: 100px;}
-
 .images2{padding: 40px;}
-.pose4{
-  margin-left: 150px;
-  margin-top: 30px;
-}
-.pose5{
-  margin-left: 70px;
-  margin-top: 30px;
-}
-.pose6{
-  margin-left: 130px;
-  margin-top: 30px;
-}
 .images3{padding: 10px;}
-.pose7{
-  margin-left: 420px;
-  margin-bottom: 200px;
-}
-.pose8{
-  margin-left: 370px;
-}
+
 .fin{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #0028BE ;
