--- a/Le_Site_SAE.05-06/Page stats/css/style_stat.css
+++ b/Le_Site_SAE.05-06/Page stats/css/style_stat.css
@@ -19,9 +19,8 @@ body{
     margin-bottom: 10px;
 }
 a{
-  color: white;
-  text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-decoration: none;
     display: inline;
     padding: 25px;
     margin-top: 90px;
@@ -35,7 +34,6 @@ ul{
 }
 li{
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     display: inline;
     padding: 25px;
     margin-top: 90px;
@@ -111,16 +109,15 @@ h1{
 .item-width3{width: 300px;}
 
 .presentation{
-  height: 1900px;
+  height: 1725px;
   border-left: solid;
   border-right: solid;
   margin: 0px 100px 80px 100px;
   background-color: rgb(164, 184, 252);
 }
-.presentation img{
-  margin-top: 70px;
-  margin-bottom: 40px;
-}
+.presentation img{margin-top: 70px;}
+
+.container img{margin-bottom: -10px;}
 .bloc{
   text-align: center;
   background-color: #0028BE;
@@ -132,7 +129,6 @@ h1{
 .images3{padding: 10px;}
 
 .fin{
-    font-family: Arial, Helvetica, sans-serif;
     background-color: #0028BE ;
     opacity: 0.9;
     padding: 10px;
