--- a/Le_Site_SAE.05-06/Page_histoire/styles.css
+++ b/Le_Site_SAE.05-06/Page_histoire/styles.css
@@ -68,7 +68,7 @@ header li a{
 
 #imagePrincipale{
     padding-top: 70px;
-    background: url(image_fond.jpg) no-repeat fixed 50% 50%;
+    background: url(medias/image_fond.jpg) no-repeat fixed 50% 50%;
     background-size: cover;
     height: 600px;
     border-bottom: solid;
