--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -43,7 +43,8 @@ nav{
     background-color: #0028BE;
     position: fixed;
     width: 100%;
-    opacity: 0.9;
+    opacity: 0.95;
+    z-index: 100;
 }
 header li{
     float: right;
@@ -53,7 +54,7 @@ header li a{
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 18px 16px;
+    padding: 15px 16px;
 }
 #logo {
     font-family: 'Dancing Script', cursive;
@@ -137,38 +138,6 @@ footer {
     color: white;
     padding: 20px 0 10px 0;
     text-align: center;
-}
-form {
-    margin: 0 auto;
-    max-width: 900px;
-}
-input, textarea, button {
-    border: solid #0028BE;
-    width: 55%;
-    padding: 15px 10px;
-    margin: 1px 0;
-    font-size: 1.2em;
-    font-family: 'Advent Pro' sans-serif;
-    border-radius: 8px;
-}
-textarea {
-    height: 120px;
-}
-button {
-    font-size: 1.5em;
-    background-color: #0028BE;
-}
-button:hover {
-    background-color: white;
-    color: #0028BE;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
-}
-#deuxièmeTrait {
-    height: 1px;
-    width: 75%;
-    background-color: #0028BE;
-    margin: 60px auto;
 }
 #copyrightEtIcons {
     display: flex;
