--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -158,7 +158,7 @@ footer {
     background-color: #0028BE;
     border-radius: 50px;
     display: inline-block;
-    padding: 0 5px;
+    padding: 5px 12px;
     font-size: 1.3em;
     color: white;
     margin: 0px 2px;
