--- a/Le_Site_SAE.05-06/Page_histoire/styles.css
+++ b/Le_Site_SAE.05-06/Page_histoire/styles.css
@@ -70,7 +70,7 @@ header li a{
 
 #imagePrincipale{
     padding-top: 70px;
-    background: url(medias/image_fond.jpg) no-repeat fixed 50% 50%;
+    background: url(image_fond.jpg) no-repeat fixed 50% 50%;
     background-size: cover;
     height: 600px;
     border-bottom: solid;
@@ -129,8 +129,8 @@ h1 {
 	padding: 0px 500px;
 }
 
-.timeline h3{
-    color: rgb(164, 184, 252);
+.timeline summary{
+    font-size: 20px;
 }
 
 .timeline ul{
@@ -141,28 +141,44 @@ h1 {
 }
 
 .timeline ul li{
-	padding:20px 20px;
+	padding: 10px 10px;
 	position: relative;
 	cursor:pointer;
 	transition:.5s;
 }
 
-.timeline ul li h3{
-	display:inline-block;
-	background-color:#0028BE;
-	border-radius:25px;
-	padding:2px 5px;
-	font-size:15px;
+details{
+    width: 500px;
+    background-color: #0028BE;
+    color : rgb(164, 184, 252);
+	border-radius:2em;
+	padding:2px 6px;
+	font-size: 20px;
 	text-align: center;
-    
+    width: 20em;
+    border: none;
+    box-shadow: 5px 5px 5px black;
+    cursor: pointer;
+}
+
+
+details > summary{
+    color: rgb(164, 184, 252);
+    text-shadow: 5px 5px 5px black;
+}
+details > p{
+    font-size: 18px;
+    color: rgb(164, 184, 252);
+    text-shadow: 5px 5px 5px black ;
+}
+
+.timeline ul li summary{
+	display:inline-block;
 }
 
 .timeline ul li details{
     color: black;
-}
-
-.timeline ul li .content p{
-	padding:5px 0px 15px 0px;
+	padding:15px 0px 15px 0px;
 	font-size:15px;
 }
 .timeline ul li:before{
@@ -173,16 +189,14 @@ h1 {
 	background-color:#34ace0;
 	border-radius:50%;
 	left:-14px;
-	top:40px;
+	top:35px;
 	transition:.5s;
 }
-.timeline ul li:hover{
-	background-color:#0028BE;
-    color: white;
-}
+
 .timeline ul li:hover:before{
 	background-color:#0F0;
 	box-shadow:0px 0px 10px 2px #0F0;
+    top: 45px;
 }
 /*@media (max-width:500px){
 	.timeline{
