--- a/Le_Site_SAE.05-06/Page_stats/css/style_stat.css
+++ b/Le_Site_SAE.05-06/Page_stats/css/style_stat.css
@@ -10,69 +10,81 @@ body{
   justify-content: space-evenly;
   align-items: center;
 }
-/*****************************NAVBAR*********************** */
-.barre_nav{
-    background-color: #0028BE;
-    padding: 10px;
-    padding-bottom: 20px;
-    margin: -1%;
-    margin-top: -300px;;
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    opacity: 0.9;
-}
-.webedia{
-    width: 300px;
-    margin-left: 50px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    display: inline;
+li {
+    list-style-type: none;
+    margin-bottom: 8px;
 }
 a{
-  color: white;
-    text-decoration: none;
-    display: inline;
-    padding: 25px;
-    margin-top: 90px;
-    border-radius: 10%;
-    font-size: 25px;
-}
-ul{
-    text-align: right;
-    margin-top:-60px;
-}
-li{
     color: white;
-    display: inline;
-    padding: 25px;
-    margin-top: 90px;
-    border-radius: 20%;
-    font-size: 25px;
+ }
+li img{
+    height: 50px;
+    width: auto;
+    object-position: 50% 50%;
+}
+li img:hover{
+    height:52px;
+    transition: ease-in-out 0.5s;
 }
 li a:hover{
-  color: blue;
-  background-color: white;
-  transition: ease-in-out 0.5s
+    background-color: white;
+    color: #0028BE;
+    font-size:22px;
+    transition: ease-in-out 0.5s;
 }
-/*****************************ACCROCHE*********************** */
-h1{
+/*****************************NAVBAR*********************** */
+nav{
+    overflow: hidden;
+    background-color: #0028BE;
+    position: fixed;
+    width: 100%;
+    opacity: 0.95;
+    z-index: 100;
+    margin: 10px;
+    margin-top: -82px;
+}
+header{
+  margin: -1%;
+  margin-bottom: 150px;
+}
+
+header li{
+    float: right;
+    font-size: 1.2em;
+}
+header li a{
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 15px 16px;
+}
+#logo {
+    font-family: 'Dancing Script', cursive;
+    font-weight: bold ;
+    float: left;
+}
+/************************IMAGE PRINCIPALE*******************/
+#imageprincipale {
+    padding-top: 60px;
+    background: url(image2fond.png) no-repeat fixed 50% 50% ;
+    background-size: cover;
+    background-color: #0028BE;
+    height: 600px;
+    margin-top: 100px;
+}
+#imageprincipale h3 {
     text-align: center;
     color: rgb(164, 184, 252);
+    font-size: 3em;
     text-shadow: 1px 4px 2px black;
-    font-size: 4em;
-    margin-top: 300px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
-.premierTrait{
-      height: 2px;
-      width: 50%;
-      margin-top: 20px;
-      margin-bottom: 200px;
-      background-color: #0028BE;
-      box-shadow: 1px 3px 2px black;
-      margin-left: auto;
-      margin-right: auto
+#premierTrait {
+    height: 2px;
+    width: 25%;
+    margin: -3px auto;
+    background-color: rgb(164, 184, 252);
+    box-shadow: 1px 3px 2px black;
 }
 /*****************************DIAGRAMME*********************** */
 .item{
