--- a/Le_Site_SAE.05-06/Page_histoire/styles.css
+++ b/Le_Site_SAE.05-06/Page_histoire/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Advent Pro', sans-serif;
     padding: 0;
     margin: 0;
+    /** overflow-x: hidden; */
 }
 
 ul {
@@ -69,7 +70,7 @@ header li a{
 
 #imagePrincipale{
     padding-top: 70px;
-    background: url(medias/image_fond.jpg) no-repeat fixed 50% 50%;
+    background: url(image_fond.jpg) no-repeat fixed 50% 50%;
     background-size: cover;
     height: 600px;
     border-bottom: solid;
@@ -157,7 +158,10 @@ details{
     width: 20em;
     border: none;
     box-shadow: 5px 5px 5px black;
-    cursor: pointer;
+}
+
+details:hover{
+    background-color: black;
 }
 
 
@@ -193,10 +197,20 @@ details > p{
 }
 
 .timeline ul li:hover:before{
-	background-color:#0F0;
-	box-shadow:0px 0px 10px 2px #0F0;
+	background-color:black;
+	box-shadow:0px 0px 10px 2px black;
     top: 45px;
 }
+
+#logo_2016{
+    background-color: white;
+}
+
+#new_logo{
+    height: 80%;
+    width: 80%;
+}
+
 /*@media (max-width:500px){
 	.timeline{
 		width:100%;
