--- a/Le_Site_SAE.05-06/Page_stats/style_stat.css
+++ b/Le_Site_SAE.05-06/Page_stats/style_stat.css
@@ -1,4 +1,24 @@
-import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap');
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+
+  [class*="col-"] {
+    width: 100%;
+  }
+}
 html {
     scroll-behavior:smooth;
 }
@@ -10,22 +30,16 @@ body{
   justify-content: space-evenly;
   align-items: center;
 }
-li {
-    list-style-type: none;
-    margin-bottom: 8px;
-}
-a{
-    color: white;
- }
+li {list-style-type: none;}
+
+a{color: white;}
+
 li img{
     height: 50px;
     width: auto;
     object-position: 50% 50%;
 }
-li img:hover{
-    height:52px;
-    transition: ease-in-out 0.5s;
-}
+
 li a:hover{
     background-color: white;
     color: #0028BE;
@@ -41,7 +55,9 @@ nav{
     opacity: 0.95;
     z-index: 100;
     margin: 10px;
-    margin-top: -82px;
+    margin-top: -105px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 header{
   margin: -1%;
@@ -49,44 +65,44 @@ header{
 }
 
 header li{
-    float: right;
+    float: left;
     font-size: 1.2em;
+    margin-left: 175px;
 }
 header li a{
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 15px 16px;
+    padding: 18px 16px;
 }
 #logo {
     font-family: 'Dancing Script', cursive;
     font-weight: bold ;
     float: left;
+    margin-left: 5px;
 }
 /************************IMAGE PRINCIPALE*******************/
 #imageprincipale {
-    padding-top: 60px;
+    padding-top: 100px;
     background: url(media/image2fond.jpg.webp) no-repeat fixed 50% 50% ;
     background-size: cover;
     background-color: #0028BE;
     height: 600px;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 #imageprincipale h3 {
     text-align: center;
-    /*color: rgb(164, 184, 252);*/
-    color: #0028BE;;
+    color: rgb(164, 184, 252);
     font-size: 3em;
     text-shadow: 1px 4px 2px black;
     margin-bottom: 30px;
-    margin-top: 110px;
+    margin-top: 70px;
 }
 #premierTrait {
     height: 2px;
     width: 25%;
     margin: -3px auto;
-    /*background-color: rgb(164, 184, 252);*/
-    background-color: #0028BE;
+    background-color: rgb(164, 184, 252);
     box-shadow: 1px 3px 2px black;
 }
 /*****************************DIAGRAMME*********************** */
@@ -98,6 +114,18 @@ header li a{
     margin-bottom: 80px;
     background: linear-gradient(to right, yellow, orange, pink, purple, #1a237e);
   }
+  .diagramme{
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      margin-left: 90px;
+      margin-bottom: 50px;
+      margin-top: 50px;
+      background-image: conic-gradient(
+          magenta 40deg,
+          #9900CC 0 170deg,
+          #000066 0);
+  }
 .secondTrait{
   height: 3px;
   width: 25%;
@@ -105,18 +133,6 @@ header li a{
   margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
-}
-.diagramme{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin-left: 90px;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    background-image: conic-gradient(
-        magenta 40deg,
-        #9900CC 0 170deg,
-        #000066 0);
 }
 .entête{
   width: 380px;
@@ -128,7 +144,7 @@ header li a{
 }
 /*******************PRESENTATION*****************************/
 .presentation{
-  height: 2150px;
+  height: 2700px;
   border-left: solid;
   border-right: solid;
   margin: 0px 100px 80px 100px;
@@ -151,34 +167,30 @@ header li a{
 .item1{
   width: 340px;
   text-align: center;
-  color: black;
   margin-top: 30px;
-  background-color: white;
   border-radius: 20px;
   border: 3px solid black;
 }
 .item2{
   width: 420px;
   text-align: center;
-  color: black;
   margin-top: 30px;
-  background-color: white;
   border-radius: 20px;
   border: 3px solid black;
 }
 .item3{
   width: 300px;
   text-align: center;
-  color: black;
   margin-top: 30px;
-  background-color: white;
   border-radius: 20px;
   border: 3px solid black;
 }
-.images1{padding: 30px;}
-.images2{padding: 40px;}
-.images3{padding: 10px;}
+.images{padding: 40px;}
 
+.text{
+  width: 340px;
+  text-align: justify;
+}
 .troisiemeTrait{
   height: 3px;
   width: 25%;
