--- a/Le_Site_SAE.05-06/Page_stats/style_stat.css
+++ b/Le_Site_SAE.05-06/Page_stats/style_stat.css
@@ -1,24 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap');
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-@media only screen and (max-width: 768px) {
-
-  [class*="col-"] {
-    width: 100%;
-  }
-}
 html {
     scroll-behavior:smooth;
 }
@@ -200,12 +181,11 @@ header li a{
   margin-right: auto;
 }
 /****************************FOOTER********************************************/
-.fin{
-    background-color: #0028BE ;
-    opacity: 0.9;
-    padding: 10px;
-    margin-bottom: -10px;
-    margin-left: -10px;
-    margin-right: -10px;
+footer {
+    border-top: solid #0028BE;
+    background-color: rgb(118, 127, 255);
     color: white;
+    padding: 20px 0 10px 0;
+    margin: -1%;
 }
+footer h4{margin-left: 50px;}
