--- a/Le_Site_SAE.05-06/Page_stats/style_stat.css
+++ b/Le_Site_SAE.05-06/Page_stats/style_stat.css
@@ -3,7 +3,7 @@
 html {
     scroll-behavior:smooth;
 }
-body{
+body {
     font-family: 'Advent Pro', sans-serif;
 }
 .container-flex{display: flex;}
@@ -11,56 +11,55 @@ body{
   justify-content: space-evenly;
   align-items: center;
 }
+
 li {list-style-type: none;}
 
-a{color: white;}
+a {color: white;}
 
-li img{
+li img {
     height: 50px;
     width: auto;
     object-position: 50% 50%;
 }
 
-li a:hover{
+li a:hover {
     background-color: white;
     color: #0028BE;
-    font-size:22px;
+    font-size:19px;
     transition: ease-in-out 0.5s;
+    border-radius: 15%;
 }
 /*****************************NAVBAR*********************** */
-nav{
+nav {
     overflow: hidden;
     background-color: #0028BE;
     position: fixed;
     width: 100%;
-    opacity: 0.95;
     z-index: 100;
     margin: 10px;
     margin-top: -105px;
     padding-bottom: 15px;
     padding-top: 15px;
 }
-header{
+header {
   margin: -1%;
   margin-bottom: 150px;
 }
 
-header li{
+header li {
     float: left;
     font-size: 1.2em;
-    margin-left: 175px;
+    margin-left: 100px;
 }
-header li a{
+header li a {
     text-decoration: none;
     display: block;
     text-align: center;
     padding: 18px 16px;
 }
 #logo {
-    font-family: 'Dancing Script', cursive;
-    font-weight: bold ;
-    float: left;
-    margin-left: 5px;
+    float: right;
+    margin-right: 15px;
 }
 /************************IMAGE PRINCIPALE*******************/
 #imageprincipale {
@@ -71,14 +70,8 @@ header li a{
     height: 600px;
     margin-top: 120px;
 }
-#imageprincipale h3 {
-    text-align: center;
-    color: rgb(164, 184, 252);
-    font-size: 3em;
-    text-shadow: 1px 4px 2px black;
-    margin-bottom: 30px;
-    margin-top: 70px;
-}
+#Accroche{font-size: 2em;}
+
 #premierTrait {
     height: 2px;
     width: 25%;
@@ -86,16 +79,26 @@ header li a{
     background-color: rgb(164, 184, 252);
     box-shadow: 1px 3px 2px black;
 }
+
+#imageprincipale h3 {
+    text-align: center;
+    color: rgb(164, 184, 252);
+    font-size: 3em;
+    text-shadow: 1px 4px 2px black;
+    margin-bottom: 30px;
+    margin-top: 19px;
+}
 /*****************************DIAGRAMME*********************** */
-.item{
+.item {
     border: 5px solid black;
     margin-top: -50px;
     margin-left: 600px;
     margin-right: 600px;
     margin-bottom: 80px;
-    background: linear-gradient(to right, yellow, orange, pink, purple, #1a237e);
+    background: linear-gradient(to right, #0028BE, grey);
+
   }
-  .diagramme{
+.diagramme {
       width: 70px;
       height: 70px;
       border-radius: 50%;
@@ -103,11 +106,11 @@ header li a{
       margin-bottom: 50px;
       margin-top: 50px;
       background-image: conic-gradient(
-          magenta 40deg,
+          orange 40deg,
           #9900CC 0 170deg,
           #000066 0);
   }
-.secondTrait{
+.secondTrait {
   height: 3px;
   width: 25%;
   background-color: black;
@@ -115,7 +118,7 @@ header li a{
   margin-left: auto;
   margin-right: auto;
 }
-.entête{
+.entête {
   width: 380px;
   height: 70px;
   color: white;
@@ -124,55 +127,55 @@ header li a{
   margin-top: -70px;
 }
 /*******************PRESENTATION*****************************/
-.presentation{
+.presentation {
   height: 2700px;
   border-left: solid;
   border-right: solid;
   margin: 0px 100px 80px 100px;
 }
-.presentation img{
+.presentation img {
   margin-top: 70px;
   margin-bottom: 100px;
 }
-.image img{border-radius: 20px;}
+.image img {border-radius: 20px;}
 
-.sous-titre{
+.sous-titre {
   text-align: center;
   font-size: 3.25em;
   color: #0028BE;
   margin-top: 70px;
   margin-bottom: 20px;
 }
-.container img{margin-bottom: 20px;}
+.container img {margin-bottom: 20px;}
 
-.item1{
+.item1 {
   width: 340px;
   text-align: center;
   margin-top: 30px;
   border-radius: 20px;
   border: 3px solid black;
 }
-.item2{
+.item2 {
   width: 420px;
   text-align: center;
   margin-top: 30px;
   border-radius: 20px;
   border: 3px solid black;
 }
-.item3{
+.item3 {
   width: 300px;
   text-align: center;
   margin-top: 30px;
   border-radius: 20px;
   border: 3px solid black;
 }
-.images{padding: 40px;}
+.images {padding: 40px;}
 
-.text{
+.text {
   width: 340px;
   text-align: justify;
 }
-.troisiemeTrait{
+.troisiemeTrait {
   height: 3px;
   width: 25%;
   background-color: black;
@@ -183,9 +186,14 @@ header li a{
 /****************************FOOTER********************************************/
 footer {
     border-top: solid #0028BE;
-    background-color: rgb(118, 127, 255);
+    background-color: #767FFF;
     color: white;
     padding: 20px 0 10px 0;
     margin: -1%;
 }
-footer h4{margin-left: 50px;}
+footer p {margin-left: 50px;}
+
+footer span {
+  float: right;
+  margin-right: 20px;
+}
