--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -27,14 +27,11 @@ li img{
     width: auto;
     object-position: 50% 50%;
 }
-li img:hover{
-    height:52px;
-    transition: ease-in-out 0.5s;
-}
 li a:hover{
     background-color: white;
     color: #0028BE;
-    font-size:22px;
+    font-size:19px;
+    border-radius: 15%;
     transition: ease-in-out 0.5s;
 }
 /*****************************NAVBAR*********************** */
@@ -44,22 +41,24 @@ nav{
     position: fixed;
     width: 100%;
     opacity: 0.95;
+    padding-top: 15px;
+    padding-bottom: 15px;
     z-index: 100;
 }
 header li{
-    float: right;
+    float: left;
     font-size: 1.2em;
+    margin-left: 100px;
 }
 header li a{
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 15px 16px;
+    padding: 18px 16px;
 }
 #logo {
-    font-family: 'Dancing Script', cursive;
-    font-weight: bold ;
-    float: left;
+    float: right;
+    margin-right: 15px;
 }
 /************************IMAGE PRINCIPALE*******************/
 #imageprincipale {
