--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -133,40 +133,21 @@ h1 {
     transition: 0.6s ease-in-out;
 }
 /****************************FOOTER********************************************/
-footer {
+footer{
+    margin-top: 100px;
     border-top: solid #0028BE;
-    background-color: rgb(118, 127, 255);
+    background-color: #767FFF;
+    padding: 30px 30px 30px 30px;
+}
+
+footer p{
     color: white;
-    padding: 20px 0 10px 0;
-    text-align: center;
+    font-size: 15px
 }
-#copyrightEtIcons {
-    display: flex;
-    margin-bottom: 20px;
-    padding: 0 10%;
-}
-#copyright {
-    width: 50%;
-    text-align: left;
+
+footer span{
+    float: right;
     color: white;
+    font-size: 15px;
 }
-#icon {
-    width: 50%;
-    text-align: right;
-    margin: 0px 5px;
-}
-#icon a {
-    background-color: #0028BE;
-    border-radius: 50px;
-    display: inline-block;
-    padding: 5px 12px;
-    font-size: 1.3em;
-    color: white;
-    margin: 0px 2px;
-}
-#icon a:hover{
-    color: white;
-    background-color: rgb(118, 127, 255);
-    cursor: pointer;
-    transition: 0.1s ease-in;
-}
+
