--- a/Le_Site_SAE.05-06/Page_stats/style_stat.css
+++ b/Le_Site_SAE.05-06/Page_stats/style_stat.css
@@ -183,6 +183,42 @@ header li a {
   margin-left: auto;
   margin-right: auto;
 }
+
+#intro {
+    width: 700px
+ {
+     
+#bouton {
+    width: 300px
+ {
+     
+ #oeil {
+    width: 100px
+ {
+ 
+ #partenariat {
+    width: 140px
+ {
+     
+#fournisseur {
+    width: 200px
+ {
+     
+#expert {
+    width: 275px
+ {
+     
+#reseaux {
+    width: 420px
+ {
+     
+#marque {
+    width: 300px
+ { 
+     
+#communauté {
+    width: 140px
+ {
 /****************************FOOTER********************************************/
 footer {
     border-top: solid #0028BE;
