--- a/Le_Site_SAE.05-06/Page_Accueil/style.css
+++ b/Le_Site_SAE.05-06/Page_Accueil/style.css
@@ -7,12 +7,10 @@ body {
     padding: 0;
     margin: 0;
 }
-
-ul {
-    margin: 0;
-}
 li {
     list-style-type: none;
+    margin: 10px;
+    margin-top: -2px;
 }
 h2{
     text-transform: uppercase;
@@ -29,11 +27,14 @@ li img{
     width: auto;
     object-position: 50% 50%;
 }
+li img:hover{
+    height:52px;
+    transition: ease-in-out 0.5s;
+}
 li a:hover{
     background-color: white;
     color: #0028BE;
-    font-size:19px;
-    border-radius: 15%;
+    font-size:22px;
     transition: ease-in-out 0.5s;
 }
 /*****************************NAVBAR*********************** */
@@ -43,24 +44,23 @@ nav{
     position: fixed;
     width: 100%;
     opacity: 0.95;
-    padding-top: 15px;
-    padding-bottom: 15px;
     z-index: 100;
+    flex-shrink: auto;
 }
 header li{
     float: left;
     font-size: 1.2em;
-    margin-left: 100px;
 }
 header li a{
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 18px 16px;
+    padding: 15px 16px;
 }
 #logo {
+    font-family: 'Dancing Script', cursive;
+    font-weight: bold ;
     float: right;
-    margin-right: 15px;
 }
 /************************IMAGE PRINCIPALE*******************/
 #imageprincipale {
@@ -133,21 +133,40 @@ h1 {
     transition: 0.6s ease-in-out;
 }
 /****************************FOOTER********************************************/
-footer{
-    margin-top: 100px;
+footer {
     border-top: solid #0028BE;
-    background-color: #767FFF;
-    padding: 30px 30px 30px 30px;
-}
-
-footer p{
+    background-color: rgb(118, 127, 255);
     color: white;
-    font-size: 15px
+    padding: 20px 0 10px 0;
+    text-align: center;
 }
-
-footer span{
-    float: right;
+#copyrightEtIcons {
+    display: flex;
+    margin-bottom: 20px;
+    padding: 0 10%;
+}
+#copyright {
+    width: 50%;
+    text-align: left;
     color: white;
-    font-size: 15px;
 }
-
+#icon {
+    width: 50%;
+    text-align: right;
+    margin: 0px 5px;
+}
+#icon a {
+    background-color: #0028BE;
+    border-radius: 50px;
+    display: inline-block;
+    padding: 5px 12px;
+    font-size: 1.3em;
+    color: white;
+    margin: 0px 2px;
+}
+#icon a:hover{
+    color: white;
+    background-color: rgb(118, 127, 255);
+    cursor: pointer;
+    transition: 0.1s ease-in;
+}
